# Netbox-MCP-Server

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
prompts/: prompts.py
resources/: resources.py  update_resources.py
src/: main.py
src/tools/: cables.py  cached_tools.py  devices.py  interfaces.py  ipam.py  sites.py
